# unwrap_your_build_bazel

./: README.md
bazel_basics/0_what_why_and_when/: README.md
bazel_basics/1_workspace_commands_and_targets/: MODULE.bazel  README.md  playground.md
bazel_basics/1_workspace_commands_and_targets/cc_example/: BUILD
bazel_basics/1_workspace_commands_and_targets/py_example/: BUILD
bazel_basics/2_hermetic_toolchains_and_libraries/: .bazelrc  MODULE.bazel  README.md  playground.md
bazel_basics/2_hermetic_toolchains_and_libraries/cc_example/: lib.h
bazel_basics/2_hermetic_toolchains_and_libraries/py_example/: test.py
examples/0_bazel_basics_part_2/: MODULE.bazel  README.md
examples/0_bazel_basics_part_2/cc_example/: test.cpp
examples/1_bazel_basics_part_3/: .bazelignore  .gitignore  MODULE.bazel
examples/1_bazel_basics_part_3/cc_example/: example.cpp
examples/1_bazel_basics_part_3/py_example/: BUILD
examples/bazel_hermetic_toolchains_and_libs/: BUILD  MODULE.bazel  README.md  requirements.in  requirements_lock.txt
examples/bazel_hermetic_toolchains_and_libs/cc_example/: BUILD  test.cpp
examples/bazel_workspace_commands_targets/: .bazelrc  .bazelversion
examples/bazel_workspace_commands_targets/py_example/: example.py  lib.py  test.py
